@@ -284,6 +284,10 @@ import static glide.utils.ArrayTransformUtils.convertMapToValueKeyStringArray;
 import static glide.utils.ArrayTransformUtils.convertMapToValueKeyStringArrayBinary;
 import static glide.utils.ArrayTransformUtils.convertNestedArrayToKeyValueGlideStringArray;
 import static glide.utils.ArrayTransformUtils.convertNestedArrayToKeyValueStringArray;
+import static glide.utils.Java8Utils.createList;
+import static glide.utils.Java8Utils.createMap;
+import static glide.utils.Java8Utils.createSet;
+import static glide.utils.Java8Utils.repeat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -299,6 +303,7 @@ import glide.api.models.commands.ExpireOptions;
 import glide.api.models.commands.FlushMode;
 import glide.api.models.commands.GetExOptions;
 import glide.api.models.commands.InfoOptions.Section;
+import glide.api.models.commands.LInsertOptions.InsertPosition;
 import glide.api.models.commands.LPosOptions;
 import glide.api.models.commands.ListDirection;
 import glide.api.models.commands.RangeOptions;
@@ -371,6 +376,8 @@ import glide.api.models.commands.stream.StreamTrimOptions.MinId;
 import glide.managers.CommandManager;
 import glide.utils.ArgsBuilder;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -837,7 +844,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new String[] {"EX", "10"}),
@@ -860,7 +867,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptionsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new GlideString[] {gs("EX"), gs("10")}),
@@ -1730,7 +1737,7 @@ public class GlideClientTest {
         testResponse.complete(payload);
 
         // match on protobuf request
-        when(commandManager.submitScript(eq(script), eq(List.of()), eq(List.of()), any()))
+        when(commandManager.submitScript(eq(script), eq(createList()), eq(createList()), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -1759,8 +1766,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(createList(gs("key1"), gs("key2"))),
+                        eq(createList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -1795,8 +1802,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(createList(gs("key1"), gs("key2"))),
+                        eq(createList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -2055,7 +2062,7 @@ public class GlideClientTest {
         // String version should also handle null correctly with large data
 
         // Create 16KB string to trigger DirectByteBuffer path
-        String largeString = "x".repeat(16 * 1024);
+        String largeString = repeat("x", 16 * 1024);
 
         String[] keys = {"key1", "missing", "key2"};
         String[] values = {"value1", null, largeString};
@@ -4087,7 +4094,7 @@ public class GlideClientTest {
     public void smembers_returns_success() {
         // setup
         String key = "testKey";
-        Set<String> value = Set.of("testMember");
+        Set<String> value = createSet("testMember");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4156,7 +4163,7 @@ public class GlideClientTest {
     public void sdiff_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4179,7 +4186,7 @@ public class GlideClientTest {
     public void sdiff_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4354,7 +4361,7 @@ public class GlideClientTest {
     public void sinter_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4377,7 +4384,7 @@ public class GlideClientTest {
     public void sinter_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4787,7 +4794,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4812,7 +4819,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4838,7 +4845,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4864,7 +4871,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4890,7 +4897,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4917,7 +4924,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4945,7 +4952,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4976,7 +4983,7 @@ public class GlideClientTest {
         GlideString[] arguments = {
             gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")
         };
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5078,7 +5085,7 @@ public class GlideClientTest {
     @Test
     public void configGet_returns_success() {
         // setup
-        Map<String, String> testPayload = Map.of("timeout", "1000");
+        Map<String, String> testPayload = createMap("timeout", "1000");
         CompletableFuture<Map<String, String>> testResponse = new CompletableFuture<>();
         testResponse.complete(testPayload);
 
@@ -5109,7 +5116,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<String> response = service.configSet(Map.of("timeout", "1000"));
+        CompletableFuture<String> response = service.configSet(createMap("timeout", "1000"));
 
         // verify
         assertEquals(testResponse, response);
@@ -5220,7 +5227,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Map.of("member1", 2.5);
+        Map<String, Double> value = createMap("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5244,7 +5251,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5270,7 +5277,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = Map.of("member1", 2.0, "member2", 3.0);
+        Map<String, Double> value = createMap("member1", 2.0, "member2", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5295,7 +5302,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.0, gs("member2"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.0, gs("member2"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5370,7 +5377,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Map.of("member1", 2.5);
+        Map<String, Double> value = createMap("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5394,7 +5401,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5470,7 +5477,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = Map.of("member1", 3.0, "member2", 1.0);
+        Map<String, Double> value = createMap("member1", 3.0, "member2", 1.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5495,7 +5502,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 3.0, gs("member2"), 1.0);
+        Map<GlideString, Double> value = createMap(gs("member1"), 3.0, gs("member2"), 1.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5732,7 +5739,7 @@ public class GlideClientTest {
         RangeByIndex rangeByIndex = new RangeByIndex(0, 4);
         String[] arguments =
                 new String[] {key, rangeByIndex.getStart(), rangeByIndex.getEnd(), WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = Map.of("one", 1.0, "two", 2.0, "three", 3.0);
+        Map<String, Double> value = createMap("one", 1.0, "two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5760,7 +5767,7 @@ public class GlideClientTest {
                 new GlideString[] {
                     key, gs(rangeByIndex.getStart()), gs(rangeByIndex.getEnd()), gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = Map.of(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5801,7 +5808,7 @@ public class GlideClientTest {
                     "2",
                     WITH_SCORES_VALKEY_API
                 };
-        Map<String, Double> value = Map.of("two", 2.0, "three", 3.0);
+        Map<String, Double> value = createMap("two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5841,7 +5848,7 @@ public class GlideClientTest {
                     gs("2"),
                     gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = Map.of(gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6171,7 +6178,7 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {"2", key1, key2, WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = Map.of("element1", 2.0);
+        Map<String, Double> value = createMap("element1", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6197,7 +6204,7 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {gs("2"), key1, key2, gs(WITH_SCORES_VALKEY_API)};
-        Map<GlideString, Double> value = Map.of(gs("element1"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("element1"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6830,7 +6837,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6856,7 +6863,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6887,7 +6894,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6921,7 +6928,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6999,7 +7006,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7025,7 +7032,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7056,7 +7063,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7090,7 +7097,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7693,7 +7700,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamAddOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // no TRIM option
                         "test_xadd_no_trim",
@@ -7904,7 +7911,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen", new MaxLen(5L), new String[] {TRIM_MAXLEN_VALKEY_API, "5"}),
@@ -7938,7 +7945,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptionsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen",
@@ -8032,8 +8039,8 @@ public class GlideClientTest {
         String streamIdTwo = "id-two";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         String[] arguments = {READ_STREAMS_VALKEY_API, keyOne, keyTwo, streamIdOne, streamIdTwo};
 
         CompletableFuture<Map<String, Map<String, String[][]>>> testResponse =
@@ -8067,8 +8074,8 @@ public class GlideClientTest {
         GlideString streamIdTwo = gs("id-two");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_STREAMS_VALKEY_API), keyOne, keyTwo, streamIdOne, streamIdTwo
         };
@@ -8105,7 +8112,7 @@ public class GlideClientTest {
         Long count = 10L;
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         String[] arguments = {
             READ_COUNT_VALKEY_API,
             count.toString(),
@@ -8128,7 +8135,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xread(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<String, Map<String, String[][]>> payload = response.get();
 
@@ -8147,7 +8154,7 @@ public class GlideClientTest {
         Long count = 10L;
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_COUNT_VALKEY_API),
             gs(count.toString()),
@@ -8170,7 +8177,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadBinary(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<GlideString, Map<GlideString, GlideString[][]>> payload = response.get();
 
@@ -8237,7 +8244,7 @@ public class GlideClientTest {
         StreamRange start = IdBound.of(9999L);
         StreamRange end = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8266,7 +8273,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8294,7 +8302,7 @@ public class GlideClientTest {
         StreamRange end = InfRangeBound.MAX;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8333,7 +8341,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8370,7 +8379,7 @@ public class GlideClientTest {
         StreamRange end = IdBound.of(9999L);
         StreamRange start = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8399,7 +8408,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8428,7 +8438,7 @@ public class GlideClientTest {
         StreamRange start = InfRangeBound.MIN;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8467,7 +8477,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8892,8 +8903,8 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -8939,8 +8950,8 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -8986,7 +8997,7 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -9013,7 +9024,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xreadgroup(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -9036,7 +9047,7 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -9063,7 +9074,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadgroup(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -9110,7 +9121,7 @@ public class GlideClientTest {
         Long minIdleTime = 18L;
         String[] ids = new String[] {"testId"};
         String[] arguments = concatenateArrays(new String[] {key, groupName, consumer, "18"}, ids);
-        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = createMap("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9141,7 +9152,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 concatenateArrays(new GlideString[] {key, groupName, consumer, gs("18")}, ids);
         Map<GlideString, GlideString[][]> mockResult =
-                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                createMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9187,7 +9198,7 @@ public class GlideClientTest {
                     "5",
                     FORCE_VALKEY_API
                 };
-        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = createMap("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9233,7 +9244,7 @@ public class GlideClientTest {
                     gs(FORCE_VALKEY_API)
                 };
         Map<GlideString, GlideString[][]> mockResult =
-                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                createMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9418,7 +9429,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9455,7 +9466,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9492,7 +9504,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9532,7 +9544,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9571,7 +9584,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9609,7 +9622,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9647,7 +9661,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9696,7 +9710,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -10358,7 +10373,7 @@ public class GlideClientTest {
     public void linsert_returns_success() {
         // setup
         String key = "testKey";
-        var position = BEFORE;
+        InsertPosition position = BEFORE;
         String pivot = "pivot";
         String elem = "elem";
         String[] arguments = new String[] {key, position.toString(), pivot, elem};
@@ -10385,7 +10400,7 @@ public class GlideClientTest {
     public void linsert_binary_returns_success() {
         // setup
         GlideString key = gs("testKey");
-        var position = BEFORE;
+        InsertPosition position = BEFORE;
         GlideString pivot = gs("pivot");
         GlideString elem = gs("elem");
         GlideString[] arguments = new GlideString[] {key, gs(position.toString()), pivot, elem};
@@ -11836,7 +11851,7 @@ public class GlideClientTest {
         // setup
         String[] args = new String[0];
         Map<String, Map<String, Map<String, Object>>> value =
-                Map.of("::1", Map.of("1", Map.of("2", 2)));
+                createMap("::1", createMap("1", createMap("2", 2)));
         CompletableFuture<Map<String, Map<String, Map<String, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -11862,7 +11877,7 @@ public class GlideClientTest {
         // setup
         GlideString[] args = new GlideString[0];
         Map<String, Map<GlideString, Map<GlideString, Object>>> value =
-                Map.of("::1", Map.of(gs("1"), Map.of(gs("2"), 2)));
+                createMap("::1", createMap(gs("1"), createMap(gs("2"), 2)));
         CompletableFuture<Map<String, Map<GlideString, Map<GlideString, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -12186,7 +12201,7 @@ public class GlideClientTest {
         double timeout = 0.1;
         String[] arguments =
                 new String[] {Double.toString(timeout), "2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12219,7 +12234,8 @@ public class GlideClientTest {
                 new GlideString[] {
                     gs(Double.toString(timeout)), gs("2"), key, key2, gs(listDirection.toString())
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12259,7 +12275,7 @@ public class GlideClientTest {
                     COUNT_FOR_LIST_VALKEY_API,
                     Long.toString(count)
                 };
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12299,7 +12315,8 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12566,7 +12583,7 @@ public class GlideClientTest {
         String[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         String[] arguments = new String[] {"2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12593,7 +12610,8 @@ public class GlideClientTest {
         GlideString[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         GlideString[] arguments = new GlideString[] {gs("2"), key, key2, gs(listDirection.toString())};
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12626,7 +12644,7 @@ public class GlideClientTest {
                 new String[] {
                     "2", key, key2, listDirection.toString(), COUNT_FOR_LIST_VALKEY_API, Long.toString(count)
                 };
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12662,7 +12680,8 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13094,7 +13113,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Set<String> value = Set.of("one", "two");
+        Set<String> value = createSet("one", "two");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13119,7 +13138,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Set<GlideString> value = Set.of(gs("one"), gs("two"));
+        Set<GlideString> value = createSet(gs("one"), gs("two"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13573,7 +13592,8 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING};
-        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13598,7 +13618,8 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING)};
-        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13620,7 +13641,8 @@ public class GlideClientTest {
     @Test
     public void lcsIdx_throws_NullPointerException() {
         // setup
-        Map<String, Object> value = Map.of("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         // exception
         RuntimeException runtimeException =
@@ -13640,7 +13662,7 @@ public class GlideClientTest {
         String[] arguments =
                 new String[] {key1, key2, IDX_COMMAND_STRING, MINMATCHLEN_COMMAND_STRING, "2"};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13673,7 +13695,7 @@ public class GlideClientTest {
                     key1, key2, gs(IDX_COMMAND_STRING), gs(MINMATCHLEN_COMMAND_STRING), gs("2")
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13703,7 +13725,7 @@ public class GlideClientTest {
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING, WITHMATCHLEN_COMMAND_STRING};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13734,7 +13756,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING), gs(WITHMATCHLEN_COMMAND_STRING)};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13772,7 +13794,7 @@ public class GlideClientTest {
                     WITHMATCHLEN_COMMAND_STRING
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13810,7 +13832,7 @@ public class GlideClientTest {
                     gs(WITHMATCHLEN_COMMAND_STRING)
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -14044,7 +14066,7 @@ public class GlideClientTest {
     public void pubsubNumSub_returns_success() {
         // setup
         String[] arguments = new String[] {"ch1", "ch2"};
-        Map<String, Long> value = Map.of();
+        Map<String, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<String, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14067,7 +14089,7 @@ public class GlideClientTest {
     public void pubsubNumSubBinary_returns_success() {
         // setup
         GlideString[] arguments = new GlideString[] {gs("ch1"), gs("ch2")};
-        Map<GlideString, Long> value = Map.of();
+        Map<GlideString, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<GlideString, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14091,7 +14113,7 @@ public class GlideClientTest {
     public void sunion_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14113,7 +14135,7 @@ public class GlideClientTest {
     public void sunion_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14981,7 +15003,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15047,7 +15069,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15178,7 +15200,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15243,7 +15265,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15370,7 +15392,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15445,7 +15467,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15581,7 +15603,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15623,7 +15645,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15737,7 +15759,7 @@ public class GlideClientTest {
         String[] arguments = {key};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             "name",
                             "groupName",
                             "consumers",
@@ -15777,7 +15799,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             gs("name"),
                             gs("groupName"),
                             gs("consumers"),
@@ -15818,7 +15840,7 @@ public class GlideClientTest {
         String[] arguments = {key, groupName};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    Map.of("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
+                    createMap("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
                 };
 
         CompletableFuture<Map<String, Object>[]> testResponse = new CompletableFuture<>();
@@ -15847,7 +15869,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key, groupName};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             gs("name"),
                             gs("groupName"),
                             gs("pending"),
@@ -15881,7 +15903,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15906,7 +15928,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key, FULL};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15932,7 +15954,7 @@ public class GlideClientTest {
         String key = "testKey";
         int count = 42;
         String[] arguments = {key, FULL, COUNT, "42"};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15957,7 +15979,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15982,7 +16004,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key, gs(FULL)};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -16008,7 +16030,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         int count = 42;
         GlideString[] arguments = {key, gs(FULL), gs(COUNT), gs("42")};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -16148,7 +16170,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.subscribe(Set.of("channel1", "channel2"), 5000);
+        CompletableFuture<Void> response = service.subscribe(createSet("channel1", "channel2"), 5000);
 
         // verify
         assertNull(response.get());
@@ -16166,7 +16188,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.unsubscribe(Set.of("channel1"), 1000);
+        CompletableFuture<Void> response = service.unsubscribe(createSet("channel1"), 1000);
 
         // verify
         assertNull(response.get());
@@ -16184,7 +16206,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.psubscribe(Set.of("pattern*"), 3000);
+        CompletableFuture<Void> response = service.psubscribe(createSet("pattern*"), 3000);
 
         // verify
         assertNull(response.get());
@@ -16203,7 +16225,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.punsubscribe(Set.of("pattern*"), 2000);
+        CompletableFuture<Void> response = service.punsubscribe(createSet("pattern*"), 2000);
 
         // verify
         assertNull(response.get());
